[gd_scene load_steps=4 format=3 uid="uid://b2viyh3ijr7ys"]

[ext_resource type="Script" path="res://Dashboard/WarningTint/warning_tint.gd" id="1_g3jku"]

[sub_resource type="Gradient" id="Gradient_4xcxf"]
offsets = PackedFloat32Array(0, 0.00649351, 0.181818, 0.909091)
colors = PackedColorArray(0, 0, 0, 1, 0.214286, 0.214286, 0.214286, 1, 0.470238, 0.470238, 0.470238, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ghccw"]
gradient = SubResource("Gradient_4xcxf")
fill_from = Vector2(1, 1)

[node name="WarningTint" type="Node2D"]
script = ExtResource("1_g3jku")

[node name="Tint" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0)
position = Vector2(566, 333.5)
scale = Vector2(19.4063, 11.2969)
texture = SubResource("GradientTexture2D_ghccw")

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
